[package]
name = "saga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "server"
path = "examples/server.rs"

[[example]]
name = "client"
path = "examples/client.rs"

[dependencies]
abao = { version = "0.1.2" }
anyhow = "1.0.69"
blake3 = "1.3.3"
bytes = "1.4.0"
env_logger = "0.10.0"
tracing = "0.1"
rustls = { version = "0.20.8", default-features = false, features = ["dangerous_configuration"] }
rcgen = "0.10.0"
tokio = { version = "1.25.0", features = ["full"]}
quinn = "0.9.3"

[dev-dependencies]
tracing-subscriber = "0.3.16"
